--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wweb by ospho</title>
+    <title>Lunar Shop</title>
     <style>
         /* Style de base de la page */
         body {
@@ -13,7 +13,7 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
-            background: url('https://cdn.discordapp.com/attachments/1276911016105476130/1301045745729933332/Coq_Dessin.gif?ex=67230cc6&is=6721bb46&hm=ba48ad319ae185ff24f9564205a12fcc6deac3ed2928fcdfdbde2e07bcd5f5e5') no-repeat center center fixed;
+            background: url('https://i.pinimg.com/originals/83/ef/2f/83ef2f5bce915c0018e66ba562e1a7fc.gif') no-repeat center center fixed;
             background-size: cover;
             overflow: hidden;
         }
