--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <!-- Bouton Discord -->
         <button class="btn discord" onclick="window.location.href='https://discord.gg/BjrDD8HRyH';">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+            <img src="Png/Tiktok.png" alt="TikTok Logo">
                 <path d="M20.317 4.369A19.791 19.791 0 0016.949 3a14.47 14.47 0 00-.719 1.511 18.993 18.993 0 00-5.462 0A14.55 14.55 0 0010.051 3 19.796 19.796 0 003.683 4.369C1.522 8.173.751 11.881.428 15.545a19.896 19.896 0 005.994 3.08 14.924 14.924 0 001.258-2.021 12.318 12.318 0 01-1.979-.939c.167-.119.335-.238.497-.361 3.94 1.92 8.189 1.92 12.104 0 .162.123.33.242.507.356a19.774 19.774 0 004.85-7.257c.028-.1.068-.214.075-.348 0-.001.001-.003.001-.004A19.825 19.825 0 0020.317 4.37z"/>
             </svg>
             Discord
